--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "mocha": "^4.0.1"
+  },
+  "devDependencies": {
+    "should": "^13.1.3",
+    "sinon": "^4.1.1"
   }
 }
