--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "mocha": "^4.0.1"
   },
   "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-http": "^3.0.0",
     "should": "^13.1.3",
     "sinon": "^4.1.1"
   }
