--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   },
   "homepage": "https://github.com/WebCourse3/Assaf-TourOfHeros-Server#readme",
   "dependencies": {
+    "@types/express": "^4.0.39",
+    "@types/node": "^8.0.50",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "mocha": "^4.0.1"
@@ -28,7 +30,9 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
+    "eslint": "^4.10.0",
     "should": "^13.1.3",
-    "sinon": "^4.1.1"
+    "sinon": "^4.1.1",
+    "typescript-eslint-parser": "^8.0.1"
   }
 }
